# HFT-C

./: CMakeLists.txt  README.md  main.cpp
cmake-3.4.1-Darwin-x86_64/CMake.app/Contents/: Info.plist
cmake-3.4.1-Darwin-x86_64/CMake.app/Contents/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
cmake-3.4.1-Darwin-x86_64/CMake.app/Contents/doc/cmake/html/command/: add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_subdirectory.html  add_test.html  aux_source_directory.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  cmake_minimum_required.html  cmake_policy.html  configure_file.html  continue.html  (+98 more)
cmake-3.4.1-Darwin-x86_64/CMake.app/Contents/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
cmake-3.4.1-Darwin-x86_64/CMake.app/Contents/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-properties.7  cmake-qt.7  cmake-toolchains.7  cmake-variables.7
historical_data/: AAPL.csv  BAC.csv  CVX.csv  F.csv  GE.csv  GILD.csv  GOOGL.csv  JNJ.csv  JPM.csv  KO.csv  MRNA.csv  MSFT.csv  PFE.csv  PG.csv  QQQ.csv  SPY.csv  T.csv  XOM.csv
src/: Backtester.cpp  Backtester.h  MarketData.h  MovingAverageStrategy.cpp  MovingAverageStrategy.h  Portfolio.cpp  Portfolio.h  StockData.cpp  StockData.h  main.cpp  pyhton.py
(+1041 files in other folders)
